# crepe

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  contributing.md  lazy.mk  makefile  readme.md
game/: AquariumSubScene.cpp  CMakeLists.txt  Config.h  EndGameScript.cpp  EndGameScript.h  EngineConfig.h  Events.h  ForestParallaxScript.cpp  ForestSubScene.cpp  GameScene.cpp  GameScene.h  HallwaySubScene.cpp  MoveCameraManualyScript.cpp  MoveCameraManualyScript.h  PlayerScript.cpp  PlayerSubScene.cpp  PlayerSubScene.h  PreviewScene.cpp  PreviewScene.h  QuitScript.cpp  QuitScript.h  Random.cpp  Random.h  StartGameScript.cpp  StartGameScript.h  StartSubScene.cpp  main.cpp  makefile
game/background/: AquariumScript.cpp  AquariumScript.h  AquariumSubScene.cpp  AquariumSubScene.h  BackgroundSubScene.cpp  BackgroundSubScene.h  CMakeLists.txt  ForestParallaxScript.cpp  ForestParallaxScript.h  ForestSubScene.cpp  ForestSubScene.h  HallwayScript.cpp  HallwayScript.h  HallwaySubScene.cpp  HallwaySubScene.h  StartSubScene.cpp  StartSubScene.h
game/coins/: CoinData.h  CoinPool.cpp  CoinPool.h  CoinPoolSubScene.cpp  CoinPoolSubScene.h  CoinScript.cpp  CoinScript.h  CoinSubScene.cpp  CoinSubScene.h  CoinSystem.cpp  CoinSystem.h  CoinSystemScript.cpp  CoinSystemScript.h
game/enemy/: BattleScript.cpp  BattleScript.h  BattleWonEvent.h  EnemyBulletPool.cpp  EnemyBulletPool.h  EnemyBulletScript.cpp  EnemyBulletScript.h  EnemyBulletSubScene.cpp  EnemyBulletSubScene.h  EnemyConfig.h  EnemyPool.cpp  EnemyPool.h  EnemyScript.cpp  EnemyScript.h  EnemySubScene.cpp  EnemySubScene.h
game/hud/: HudConfig.h  HudScript.cpp  HudScript.h  HudSubScene.cpp  HudSubScene.h  SpeedScript.cpp  SpeedScript.h
game/mainmenu/: BannerSubScene.cpp  BannerSubScene.h  ButtonScript.cpp  ButtonScript.h  ButtonSetMainMenuScript.cpp  ButtonSetShopScript.cpp  ButtonStartScript.cpp  ButtonStartScript.h  ButtonSubScene.cpp  ButtonSubScene.h  ButtonTransitionPreviewScript.cpp  ButtonTransitionPreviewScript.h  IButtonScript.cpp  IShowScript.cpp  IShowScript.h  ITransitionScript.cpp  MainMenuConfig.h  MainMenuScene.cpp  SetShopScript.cpp  SetShopScript.h  ShopMenuScene.cpp  ShopMenuScene.h  ShowPreviewScript.cpp  ShowPreviewScript.h  ShowScript.cpp  ShowScript.h  ShowStartScript.cpp  ShowStartScript.h  TransitionStartScript.cpp  TransitionStartScript.h
game/menus/: BannerSubScene.cpp  BannerSubScene.h  ButtonNextMainMenuScript.cpp  ButtonNextMainMenuScript.h  ButtonNextMainMenuSubScript.cpp  ButtonNextMainMenuSubScript.h  ButtonReplaySubScript.cpp  ButtonReplaySubScript.h  ButtonSetMainMenuScript.cpp  ButtonSetMainMenuScript.h  ButtonSetMainMenuSubScript.cpp  ButtonSetMainMenuSubScript.h  ButtonSetShopScript.cpp  ButtonSetShopScript.h  ButtonSetShopSubScript.cpp  ButtonSetShopSubScript.h  ButtonShowCreditsSubScript.cpp  ButtonShowCreditsSubScript.h  ButtonSubScene.cpp  ButtonSubScene.h  FloatingWindowSubScene.cpp  FloatingWindowSubScene.h  IButtonScript.cpp  IButtonScript.h  IFloatingWindowScript.cpp  IFloatingWindowScript.h  MenusConfig.h
game/missile/: AlertScript.cpp  AlertScript.h  AlertSubScene.cpp  AlertSubScene.h  CollisionScript.cpp  CollisionScript.h  MissilePool.cpp  MissilePool.h  MissileScript.cpp  MissileScript.h  MissileSubScene.cpp  MissileSubScene.h  SpawnEvent.cpp  SpawnEvent.h
game/player/: PlayerAudioScript.cpp  PlayerAudioScript.h  PlayerBulletPool.cpp  PlayerBulletPool.h  PlayerBulletScript.cpp  PlayerBulletScript.h  PlayerBulletSubScene.cpp  PlayerBulletSubScene.h  PlayerEndScript.cpp  PlayerEndScript.h  PlayerScript.cpp  PlayerScript.h  PlayerSubScene.cpp
game/prefab/: CMakeLists.txt  PlayerObject.cpp  PlayerObject.h  PlayerScript.cpp  PlayerScript.h  ZapperObject.cpp  ZapperObject.h  ZapperPoolScript.cpp  ZapperPoolScript.h  ZapperPoolSubScene.cpp  ZapperPoolSubScene.h  ZapperScript.cpp  ZapperScript.h
game/preview/: Coin.cpp  Coin.h  MissleScript.cpp  MissleScript.h  MissleSubScene.cpp  MissleSubScene.h  NpcScript.cpp  NpcScript.h  NpcSubScene.cpp  NpcSubScene.h  PlayerScript.cpp  PlayerScript.h  PlayerSubScene.cpp  PrevPlayerScript.cpp  PrevPlayerScript.h  PrevPlayerSubScene.cpp  PrevPlayerSubScene.h  PreviewReplaySubScript.cpp  PreviewReplaySubScript.h  PreviewStartRecSubScript.cpp  PreviewStartRecSubScript.h  PreviewStopRecSubScript.cpp  PreviewStopRecSubScript.h  SmokeSubScene.cpp  SmokeSubScene.h
game/scheduler/: ObjectsScheduler.cpp  ObjectsScheduler.h
game/util/: scrollgen
game/workers/: CollisionScript.cpp  CollisionScript.h  PanicFromPlayer.cpp  PanicFromPlayer.h  PanicFromPlayerScript.cpp  PanicFromPlayerScript.h  WorkerScript.cpp  WorkerScript.h  WorkersSubScene.cpp  WorkersSubScene.h
lib/sdl_image/: CMakeLists.txt
lib/segvcatch/: CMakeLists.txt
lib/soloud/: CMakeLists.txt
lib/whereami/: CMakeLists.txt
mwe/ecs-entt/: CMakeLists.txt
mwe/ecs-homemade/: CMakeLists.txt
mwe/ecs-memory-efficient/: CMakeLists.txt
mwe/events/: CMakeLists.txt
mwe/gameloop/: CMakeLists.txt
resource-manager/: Audio_asset.cpp  Audio_asset.h  CMakeLists.txt  Image_asset.cpp  Image_asset.h  TextureMap.cpp  TextureMap.h  constants.cpp  main.cpp  map_asset.cpp  map_asset.h  map_layer.cpp  map_layer.h  resource.h  resource_converter.h  resource_fabricator.cpp  resource_fabricator.h  resource_manager.cpp  resource_manager.h  spritesheet.cpp  spritesheet.h  tiledMap.cpp
src/: CMakeLists.txt  build.sh  compile.sh  dummy_audio.cpp  dummy_rendering.cpp  dummy_resource_manager.cpp  makefile  readme.md
src/crepe/: AnimatorSystem.cpp  AnimatorSystem.h  Asset.cpp  Asset.h  CMakeLists.txt  CircleCollider.h  Collider.cpp  Collider.h  Collider.hpp  CollisionSystem.cpp  CollisionSystem.h  Component.cpp  Component.h  Component.hpp  ComponentManager.cpp  ComponentManager.h  ComponentManager.hpp  Components.cpp  Components.h  DB.cpp  DB.h  Exception.cpp  Exception.h  Exception.hpp  Force.cpp  Force.h  GameObject.cpp  GameObject.h  GameObject.hpp  Gameobject.cpp  Gameobject.hpp  LoopTimer.cpp  LoopTimer.h  (+66 more)
test/: CMakeLists.txt  audio.cpp  dummy.cpp
(+543 files in other folders)
